Add webcomic template project

--- a/index.html
+++ b/index.html
@@ -47,13 +47,39 @@
       </div>
     </div>
 
+    <div class="view overflow-hidden col-2" id="webcomic+">
+
+      <ul class="project-list margin-0 secondary-color">
+        <li class="project-list-heading">
+          <h3>Project</h3></li>
+          <li class="is-active"><a href="#webcomic+" title="Webcomic Template">Webcomic Template</a></li>
+          <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
+          <li title="comiCharacters"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
+        <li title="CSS SPA Portfolio"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
+        <li><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
+        <li><a href="#illustrations" title="CSS SPA Portfolio">Illustrations</a></li>
+      </ul>
+      <h2><span class="secondary-color project-title">WebcomicX</span></h2>
+      <div class="content overflow-hidden cf">
+        <a target="_blank" href="https://www.sheldonlloyd.com/Webcomic-plus/"><img class="project-preview" src="images/webcomic-template-screenshot.png" width="auto" height="auto" /></a>
+        <h3>Details</h3>
+        <p>
+            This is a Webcomic Template using only CSS
+        </p>
+        <h3>Case Study</h3>
+        <p>
+          This webcomic template uses css to page through the webcomic instead of JavaScript
+        </p>
+      </div>
+    </div>    
     <div class="view overflow-hidden col-2" id="webcomicx">
 
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
           <h3>Project</h3></li>
-        <li class="is-active"><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
-        <li title="comiCharacters"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
+          <li><a href="#webcomic+" title="Webcomic Template">Webcomic Template</a></li>
+          <li class="is-active"><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
+          <li title="comiCharacters"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li title="CSS SPA Portfolio"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
         <li><a href="#logos" title="CSS SPA Portfolio">Logos</a></li>
         <li><a href="#illustrations" title="CSS SPA Portfolio">Illustrations</a></li>
@@ -94,7 +120,9 @@
     <div class="view overflow-hidden col-2" id="comiCharacters">
       <ul class="project-list margin-0 secondary-color">
         <li class="project-list-heading">
-          <h3>Project</h3></li>
+          <h3>Project</h3>
+        </li>
+        <li><a href="#webcomic+" title="Webcomic Template">Webcomic Template</a></li>
         <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
         <li class="is-active"><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
@@ -130,6 +158,7 @@
         <li class="project-list-heading">
           <h3>Project</h3>
         </li>
+        <li><a href="#webcomic+" title="Webcomic Template">Webcomic Template</a></li>
         <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
         <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li class="is-active"><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
@@ -170,6 +199,7 @@
         <li class="project-list-heading">
           <h3>Project</h3>
         </li>
+        <li><a href="#webcomic+" title="Webcomic Template">Webcomic Template</a></li>
         <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
         <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
@@ -240,6 +270,7 @@
         <li class="project-list-heading">
           <h3>Project</h3>
         </li>
+        <li><a href="#webcomic+" title="Webcomic Template">Webcomic Template</a></li>
         <li><a href="#webcomicx" title="WebcomicX">WebcomicX</a></li>
         <li><a href="#comiCharacters" title="comiCharacters">comiCharacters</a></li>
         <li><a href="#css-spa" title="CSS SPA Portfolio">CSS SPA Portfolio</a></li>
@@ -320,6 +351,7 @@
         <div class="main-nav-inner overflow-hidden">
           <h3>Projects</h3>
           <ul class="main-nav-list margin-0">
+            <li><div class="nav-list-wrapper"><a href="#webcomic+">Webcomic Template</a></div></li>
             <li><div class="nav-list-wrapper"><a href="#webcomicx">WebcomicX</a></div></li>
             <li><div class="nav-list-wrapper"><a href="#comiCharacters">comiCharacters</a></div></li>
             <li><div class="nav-list-wrapper"><a href="#css-spa">CSS SPA Portfolio</a></div></li>
