edit case study for empress art logo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h2>About</h2>
       <div class="content overflow-hidden cf">
         <p>
-          My name is Sheldon Lloyd. I a full-stack web designer. Growing up I have always considered myself a hobbyist comic creator. Although I got my first taste of programming in high school it wasn't until college that I discovered that I might have a talent in it as well.
+          My name is Sheldon Lloyd. I am full-stack web designer. Growing up I have always considered myself a hobbyist comic creator. Although I got my first taste of programming in high school it wasn't until college that I discovered that I might have a talent in it as well.
         </p>
         <p>
           My love of comics and a budding interest in coding formed the perfect marriage. This gave birth to my passion for web design and development. This is especially true if you consider how similar creating a website is to creating a comic book. The story, art, design, and layout of a comic are much like the design and UX stage of creating a website. Then there is the logo and landing page which is like the cover of a comic. One could even argue that the process of <a href="https://www.adapptor.com.au/blog/coding-is-surprisingly-like-writing">writing dialogue is akin to coding</a>
@@ -227,7 +227,7 @@
         </p>
         <h3>Case Study</h3>
         <p>
-          This is the second version of the design. She asked for redesign because she wanted it to be more feminine. The letter A is in the shape of a art pen nib and is shown the process of complete the logo. The words empress art is surrounded by an representing the artists having a good eye for detail or good art. 
+          This is the second version of the design. She asked for redesign because she wanted it to be more feminine. The letter A is in the shape of a art pen nib and is shown the process of completing the logo. The A ca also be seen as a stiletto shoe giving it a femine touch. The words empress art is surrounded by an representing the artists having a good eye for detail or good art. 
         </p>
       </div>      
       <h2><span class="secondary-color project-title">Cyber.Beast</span></h2>
@@ -343,7 +343,7 @@
         <div class="main-nav-inner overflow-hidden">
           <h3><a href="#about">About</a></h3>
           <p>
-            My name is Sheldon Lloyd. I a full-stack web designer. <a href="#about">More&hellip;</a>
+            My name is Sheldon Lloyd. I am full-stack web designer. <a href="#about">More&hellip;</a>
           </p>
         </div>
       </div>
