Fix HTML structure and improve content layout

--- a/character-vault/index.html
+++ b/character-vault/index.html
@@ -4,13 +4,14 @@
     <javascript href="/scripts/scripts.js"></javascript>
   </head>
   <body>
-<h1>Comic Characters</h1>
+    <div class="container launch">
+    <h1>Comic Characters</h1>
 
-<p>A vault for characters I created that can be used by anyone for anyone</p>
-<p>All though its called comic characters I doesn't have to be used for comic books you can use the comics I create for anything you see fit. It maybe for a comic a movie or something as simple as a social media profile picture</p>
-<div><a href="www.sheldonlloyd.com">comicharacters</a> © 2025 by <a href="www.sheldonlloyd.com">Sheldon Micheals Lloyd</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"></div>
-<ul>
-  
-</ul>
+    <p>A vault for characters I created that can be used by anyone for anyone</p>
+    <p>All though its called comic characters I doesn't have to be used for comic books you can use the comics I create for anything you see fit. It maybe for a comic a movie or something as simple as a social media profile picture</p>
+
+    <div><a href="www.sheldonlloyd.com">comicharacters</a> © 2025 by <a href="www.sheldonlloyd.com">Sheldon Micheals Lloyd</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"></div>
+    
+    </div>
   </body>
 </html>
