--- a/character-vault/index.html
+++ b/character-vault/index.html
@@ -5,13 +5,21 @@
   </head>
   <body>
     <div class="container launch">
+      <h3>Launching Soon</h3>
+      <div class="inner-container>
     <h1>Comic Characters</h1>
 
     <p>A vault for characters I created that can be used by anyone for anyone</p>
     <p>All though its called comic characters I doesn't have to be used for comic books you can use the comics I create for anything you see fit. It maybe for a comic a movie or something as simple as a social media profile picture</p>
-
+    <div class="social">
+        <h4>Stay Updated</h4>
+    <a target="_blank" href="https://twitter.com/sheldonmlloyd" class="social-link" title="Twitter" style="background-image:url(images/twitter.png)">Twitter</a>
+    <a target="_blank" href="https://github.com/sheldon-lloyd" class="social-link" title="GitHub" style="background-image:url(images/github.png);border:0">GitHub</a>
+    <a target="_blank" href="https://github.com/sheldon-lloyd" class="social-link" title="GitHub" style="background-image:url(images/fef39b495306149.5e5444f4b75a0.png)">GitHub</a>
+  </div>
     <div><a href="www.sheldonlloyd.com">comicharacters</a> © 2025 by <a href="www.sheldonlloyd.com">Sheldon Micheals Lloyd</a> is licensed under <a href="https://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a><img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"><img src="https://mirrors.creativecommons.org/presskit/icons/sa.svg" alt="" style="max-width: 1em;max-height:1em;margin-left: .2em;"></div>
-    
     </div>
+    </div>
+    
   </body>
 </html>
