Fix HTML formatting in character-vault/index.html

--- a/character-vault/index.html
+++ b/character-vault/index.html
@@ -6,7 +6,7 @@
   <body>
     <div class="container launch">
       <h3>Launching Soon</h3>
-      <div class="inner-container>
+      <div class="inner-container">
     <h1>Comic Characters</h1>
 
     <p>A vault for characters I created that can be used by anyone for anyone</p>
