--- a/character-vault/index.html
+++ b/character-vault/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="style" href="../styles/launch.css">
+    <link rel="stylesheet" href="../styles/launch.css">
     <javascript href="/scripts/scripts.js"></javascript>
   </head>
   <body>
