--- a/character-vault/index.html
+++ b/character-vault/index.html
@@ -11,7 +11,7 @@
 
     <p>A vault for characters I created that can be used by anyone for anyone</p>
     <p>All though its called comic characters I doesn't have to be used for comic books you can use the comics I create for anything you see fit. It maybe for a comic a movie or something as simple as a social media profile picture</p>
-    <div class="social">
+    <div class="social align-center">
         <h4 class="align-center">Stay Updated</h4>
     <a target="_blank" href="https://twitter.com/sheldonmlloyd" class="social-link" title="Twitter" style="background-image:url(../images/twitter.png)">Twitter</a>
     <a target="_blank" href="https://github.com/sheldon-lloyd" class="social-link" title="GitHub" style="background-image:url(../images/github.png)">GitHub</a>
