--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
   <!--  Meta  -->
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-
+  <meta name="description" content="Sheldon Lloyd's portfolio site. A single page application built using only CSS and HTML.">
+  <meta name="keywords" content="portfolio, web design, web development, comics, webcomic, webcomic CMS, webcomic template, webcomicX, comiCharacters, CSS SPA portfolio, logos, illustrations">
   <title>Sheldon Lloyd</title>
-
+  <meta name="author" content="Sheldon Lloyd">
   <!--  Styles  -->
   <link rel="stylesheet" href="styles/site.css">
+
 </head>
 
 <body>
