Add a whole buch of stuff

--- a/character-vault/index.html
+++ b/character-vault/index.html
@@ -1,13 +1,21 @@
 <html>
   <head>
+      <!--  Meta  -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+  <meta name="description" content="A repository of free characters that can used by anyone">
+  <meta name="keywords" content="webcomic, comic, characters, repository, creative commons">
+  <title>Sheldon Lloyd</title>
+  <meta name="author" content="Sheldon Lloyd">
     <link rel="stylesheet" href="../styles/launch.css">
+    
     <javascript href="/scripts/scripts.js"></javascript>
   </head>
   <body>
     <div class="container launch">
       <h2 class="align-center">Launching Soon</h2>
       <div class="inner-container">
-    <h1 class="align-center">Comic Characters</h1>
+    <h1 class="align-center"><img src="../images/comicharacters-logo.png" alt="Comic Characters Logo"><span>Comic Characters</span></h1>
 
     <p>A vault for characters I created that can be used by anyone for anyone</p>
     <p>All though its called comic characters I doesn't have to be used for comic books you can use the comics I create for anything you see fit. It maybe for a comic a movie or something as simple as a social media profile picture</p>
